# dopplerEffect_in_Geant4

./: .gitignore  CMakeLists.txt  README.md  vis.mac
include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh
results/: LaBr3_beta002_3000keV.root  NaI_beta002_3000keV.root  compare_histograms.C  output.root
src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
